# caldav-tasks

./: .gitignore  LICENSE  README.md  biome.json  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
nix/: package.nix  update-hashes.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tray.rs
src/components/: ComposedInput.tsx  ComposedTextarea.tsx  ConfirmDialog.tsx  DateTimePicker.tsx  Header.tsx  IconPicker.tsx  ModalWrapper.tsx  Sidebar.tsx  SubtaskTreeItem.tsx  TaskEditor.tsx  TaskItem.tsx  TaskList.tsx  Tooltip.tsx
src/components/modals/: AccountModal.tsx  CalendarModal.tsx  CategoryModal.tsx  CreateCalendarModal.tsx  DatePickerModal.tsx  ExportModal.tsx  ImportModal.tsx  KeyboardShortcutModal.tsx  OnboardingModal.tsx  ReminderPickerModal.tsx  SettingsModal.tsx  TagModal.tsx  TagPickerModal.tsx  UpdateModal.tsx
src/components/modals/settings/: AboutSettings.tsx  AppearanceSettings.tsx  BehaviorSettings.tsx  ConnectionsSettings.tsx  DataSettings.tsx  NotificationSettings.tsx  ShortcutsSettings.tsx  SyncSettings.tsx  TaskDefaultsSettings.tsx  index.ts
src/context/: confirmDialogContext.ts  modalStateContext.ts
src/hooks/: useAppMenu.ts  useComposition.ts  useConfirmTaskDelete.ts  useContextMenu.ts  useDebouncedTaskUpdate.ts  useFileDrop.ts  useGlobalContextMenu.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  useMenuHandlers.ts  useModalEscapeKey.ts  useNotifications.ts  useOffline.ts  useSync.ts  useTheme.ts  useTray.ts  useUpdateChecker.ts
src/hooks/queries/: index.ts  useAccounts.ts  useSync.ts  useTags.ts  useTasks.ts  useUIState.ts
src/lib/: bootstrap.ts  caldav.ts  colorUtils.ts  database.ts  dateFormatUtils.ts  downloadUtils.ts  dragState.ts  formatUtils.ts  ical.ts  logger.ts  taskData.ts  tauri-http.ts  treeUtils.ts
src/providers/: ConfirmDialogProvider.tsx  ModalStateProvider.tsx
src/scripts/: themeFlash.js
src/store/: settingsStore.ts  taskStore.ts
src/styles/: index.css
src/types/: index.ts  lucide-icons.d.ts
src/utils/: color.ts  constants.ts  date.ts  file.ts  format.ts  ical.ts  keyboard.ts  menu.ts  misc.ts  position.ts  tree.ts  webkit.ts
