[package]
name = "caldav-tasks"
version = "0.5.31"
description = "a cross-platform CalDAV task management app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
log = "0.4"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2.9.0"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1     # Allows LLVM to perform better optimization.
lto = true            # Enables link-time-optimizations.
opt-level = "s"      # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"       # Higher performance by disabling panic handlers.
strip = true          # Ensures debug symbols are removed.
